# wsb-sentinel-agent

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/wsb_sentiment_agent/: __init__.py  main.py
src/wsb_sentiment_agent/agents/sentiment/: __init__.py  agent.py  pipeline.py
src/wsb_sentiment_agent/config/: __init__.py  settings.py
src/wsb_sentiment_agent/data_fetchers/: __init__.py  market_fetcher.py  reddit_fetcher.py
src/wsb_sentiment_agent/models/: __init__.py  reddit.py
src/wsb_sentiment_agent/utils/: __init__.py  market_utils.py  reddit_utils.py
src/wsb_sentinel_agent/: __init__.py  main.py
src/wsb_sentinel_agent/config/: __init__.py  settings.py
src/wsb_sentinel_agent/data_fetchers/: __init__.py  market_fetcher.py  reddit_fetcher.py
src/wsb_sentinel_agent/models/: __init__.py  market.py
src/wsb_sentinel_agent/utils/: __init__.py  market_utils.py
tests/: __init__.py  test_reddit_utils.py
