[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsb-sentinel-agent"
version = "0.1.0"
description = "A modern backend foundation for AI-agent development focused on Reddit WSB data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.hatchling.build]
packages = ["src/wsb_sentinel_agent"]
