[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wsb-sentiment-agent"
version = "0.1.0"
description = "A modern backend foundation for AI-agent development focused on Reddit WSB data ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "pydantic>=2.11.7",
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.hatchling.build]
packages = ["src/wsb_sentiment_agent"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
